--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -2,15 +2,23 @@
 
 <body>
     <div>
-        <form method="post">
+        <form action="/logout" method="post">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
+            <input type="submit" value="Sing Out"/>
+        </form>
+    </div>
+    <div>
+        <form method="post" action="/main">
             <input type="text" name="text" placeholder="Enter message" />
             <input type="text" name="tag" placeholder="Enter tag">
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
             <button type="submit">Submit</button>
         </form>
     </div>
     <div>List of messages</div>
     <form method="post" action="filter">
         <input type="text" name="filter">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
         <button type="submit">Search</button>
     </form>
     {{#messages}}
