--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -8,7 +8,7 @@
         </form>
     </div>
     <div>
-        <form method="post" action="/main">
+        <form method="post" action="/addMessage">
             <input type="text" name="text" placeholder="Enter message" />
             <input type="text" name="tag" placeholder="Enter tag">
             <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
